--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ nav {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-image: url(assets/mylogo.jpeg);
+    background-image: url('../assets/mylogo.jpeg');
     background-size: cover;
     background-position: center;
     color: white;
@@ -300,7 +300,7 @@ nav {
 }
 
 .profile-image {
-    background-image: url('/assets/nico2.webp');
+    background-image: url('../assets/nico2.webp');
     background-size: 380px;
     background-position: center; /* Center the image */
     background-repeat: no-repeat; 
